[tool.poetry]
name = "jati"
version = "0.1.0"
description = ""
authors = ["Andrew"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.61.0"
alembic = "1.4"
gino = {extras = ["starlette"], version = "^1.0.1"}
asyncpg = "0.21.0"
dynaconf = "3.0.0"
pyyaml = "^5.3.1"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
flake8-annotations = "^2.3.0"
pytest-asyncio = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "6.0.1"
pytest-mock = "3.2.0"
flake8 = "3.8.3"
flake8-builtins = "1.5.3"
flake8-coding = "1.3.2"
flake8-commas = "2.0.0"
flake8-comprehensions = "3.2.3"
flake8-debugger = "3.2.1"
flake8-eradicate = "0.4.0"
flake8-isort = "4.0.0"
flake8-pep3101 = "1.3.0"
flake8-print = "3.1.4"
flake8-quotes = "3.2.0"
flake8-string-format = "0.3.0"
flake8-super-call = "1.0.0"
flake8-docstrings = "1.5.0"
pytest-asyncio = "^0.14.0"
httpx = "^0.14.1"
sqlalchemy_utils = "^0.36.8"

[tool.poetry.plugins."wallet"]
".rst" = "some_module:SomeClass"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


